@@ -1,33 +1,46 @@
 package com.bloemist.controllers.order;
 
-import com.bloemist.controllers.BaseController;
+import com.bloemist.dto.Order;
 import com.bloemist.services.IOrderService;
+import com.constant.ApplicationVariable;
 import com.constant.ApplicationView;
+import java.io.IOException;
 import java.net.URL;
 import java.util.Arrays;
+import java.util.Objects;
 import java.util.ResourceBundle;
-import java.util.stream.Collectors;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
-import javafx.print.JobSettings;
-import javafx.print.PageLayout;
-import javafx.print.PageOrientation;
-import javafx.print.Paper;
-import javafx.print.Printer;
-import javafx.print.Printer.MarginType;
-import javafx.print.PrinterJob;
 import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.RadioButton;
-import javax.print.DocPrintJob;
 import javax.print.PrintService;
 import javax.print.PrintServiceLookup;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Component;
 
 @Component
-public class OrderPrintControllers extends BaseController {
+public class OrderPrintControllers extends OrderController {
 
+  public static final String LOGO = "logo";
+  public static final String CUSTOMER_NAME = "customer_name";
+  public static final String CUSTOMER_PHONE = "customer_phone";
+  public static final String ORDER_DESCRIPTION = "order_description";
+  public static final String BANNER_DESCRIPTION = "banner_description";
+  public static final String RECEIVE_NAME = "receive_name";
+  public static final String RECEIVE_PHONE = "receive_phone";
+  public static final String RECEIVE_TIME = "receive_time";
+  public static final String RECEIVE_DATE = "receive_date";
+  public static final String SALE_PRICE = "sale_price";
+  public static final String DELIVERY_FEE = "delivery_fee";
+  public static final String SALE_OFF = "sale_off";
+  public static final String TOTAL_PRICE = "total_price";
+  public static final String DEPOSIT_AMOUNT = "deposit_amount";
+  public static final String REMAIN_AMOUNT = "remain_amount";
+  public static final String STAFF_NAME = "staff_name";
+  public static final String SRC = "src";
+  public static final String PRODUCT = "product";
   IOrderService orderService;
+  Order order;
   @FXML
   private ChoiceBox<String> choicePrinter;
   @FXML
@@ -41,27 +54,21 @@ public class OrderPrintControllers extends BaseController {
   protected OrderPrintControllers(ApplicationEventPublisher publisher, IOrderService orderService) {
     super(publisher);
     this.orderService = orderService;
+
   }
 
-  public void applyPrint(){
-    if(imageBill.isSelected()){
+  @FXML
+  public void applyPrint() throws IOException {
+    order = ApplicationVariable.currentOrder;
 
-
+    if (Objects.isNull(this.order)) {
+      return;
     }
 
-    if(a5Bill.isSelected()){
-      Printer printer = Printer.getAllPrinters().stream()
-          .filter(p -> p.getName().equals(choicePrinter.getValue()))
-          .findFirst().orElseThrow();
-
-      PrinterJob job = PrinterJob.createPrinterJob(printer);
-
-      PageLayout pageLayout = printer.createPageLayout(Paper.A5, PageOrientation.PORTRAIT, MarginType.HARDWARE_MINIMUM);
-
-      if (job.printPage(pageLayout, stageManager.getPane())) {
-        job.endJob();
-      }
+    if (a5Bill.isSelected()) {
+      printA5(choicePrinter.getValue(), this.order);
     }
+
   }
 
   @Override
@@ -69,16 +76,24 @@ public class OrderPrintControllers extends BaseController {
     super.initialize(location, resources);
 
     var printerServices = PrintServiceLookup.lookupPrintServices(null, null);
-
+    order = ApplicationVariable.currentOrder;
     choicePrinter.setItems(
         FXCollections.observableList(
             Arrays.stream(printerServices)
                 .map(PrintService::getName)
-                .collect(Collectors.toList())));
+                .toList()));
   }
 
   @Override
   public void cancel() {
     switchScene(ApplicationView.INQUIRY_ORDER);
+  }
+
+  @Override
+  public void extractData() throws IOException {
+  }
+
+  @Override
+  public void initEvent() {
   }
 }
